fix(header.scss):z-index調整#100

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  z-index: 20;
 
   &__meal {
     position: absolute;
